parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CB
    GARBAGE
    OB

Grammar

Rule 0     S' -> init
Rule 1     init -> start
Rule 2     start -> bskip BEGINTABLE skip OPENTABLE handleRow CLOSETABLE
Rule 3     bskip -> CONTENT bskip
Rule 4     bskip -> OPENHREF bskip
Rule 5     bskip -> CLOSEHREF bskip
Rule 6     bskip -> OPENDATA bskip
Rule 7     bskip -> CLOSEDATA bskip
Rule 8     bskip -> OPENROW bskip
Rule 9     bskip -> CLOSEROW bskip
Rule 10    bskip -> OPENHEADER bskip
Rule 11    bskip -> CLOSEHEADER bskip
Rule 12    bskip -> OPENABBR bskip
Rule 13    bskip -> CLOSEABBR bskip
Rule 14    bskip -> OPENTABLE bskip
Rule 15    bskip -> CLOSETABLE bskip
Rule 16    bskip -> <empty>
Rule 17    handleRow -> OPENROW OPENHEADER CONTENT CLOSEHEADER OPENHEADER CONTENT CLOSEHEADER OPENHEADER CONTENT CLOSEHEADER OPENHEADER CONTENT skip CLOSEHEADER OPENHEADER CONTENT CLOSEHEADER OPENHEADER CONTENT CLOSEHEADER OPENHEADER CONTENT CLOSEHEADER CLOSEROW handleRow
Rule 18    handleRow -> OPENROW handleData CLOSEROW handleRow
Rule 19    handleRow -> <empty>
Rule 20    handleData -> OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENHEADER OPENHREF CONTENT CLOSEHREF skip CLOSEHEADER handleData
Rule 21    handleData -> OPENDATA skip CLOSEDATA handleData
Rule 22    handleData -> <empty>
Rule 23    skip -> CONTENT skip
Rule 24    skip -> OPENHREF skip
Rule 25    skip -> CLOSEHREF skip
Rule 26    skip -> <empty>

Terminals, with rules where they appear

BEGINTABLE           : 2
CB                   : 
CLOSEABBR            : 13
CLOSEDATA            : 7 20 20 21
CLOSEHEADER          : 11 17 17 17 17 17 17 17 20
CLOSEHREF            : 5 20 25
CLOSEROW             : 9 17 18
CLOSETABLE           : 2 15
CONTENT              : 3 17 17 17 17 17 17 17 20 23
GARBAGE              : 
OB                   : 
OPENABBR             : 12
OPENDATA             : 6 20 20 21
OPENHEADER           : 10 17 17 17 17 17 17 17 20
OPENHREF             : 4 20 24
OPENROW              : 8 17 18
OPENTABLE            : 2 14
error                : 

Nonterminals, with rules where they appear

bskip                : 2 3 4 5 6 7 8 9 10 11 12 13 14 15
handleData           : 18 20 21
handleRow            : 2 17 18
init                 : 0
skip                 : 2 17 20 20 20 21 23 24 25
start                : 1

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . start
    (2) start -> . bskip BEGINTABLE skip OPENTABLE handleRow CLOSETABLE
    (3) bskip -> . CONTENT bskip
    (4) bskip -> . OPENHREF bskip
    (5) bskip -> . CLOSEHREF bskip
    (6) bskip -> . OPENDATA bskip
    (7) bskip -> . CLOSEDATA bskip
    (8) bskip -> . OPENROW bskip
    (9) bskip -> . CLOSEROW bskip
    (10) bskip -> . OPENHEADER bskip
    (11) bskip -> . CLOSEHEADER bskip
    (12) bskip -> . OPENABBR bskip
    (13) bskip -> . CLOSEABBR bskip
    (14) bskip -> . OPENTABLE bskip
    (15) bskip -> . CLOSETABLE bskip
    (16) bskip -> .

    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENHEADER      shift and go to state 13
    CLOSEHEADER     shift and go to state 14
    OPENABBR        shift and go to state 15
    CLOSEABBR       shift and go to state 16
    OPENTABLE       shift and go to state 4
    CLOSETABLE      shift and go to state 5
    BEGINTABLE      reduce using rule 16 (bskip -> .)

    init                           shift and go to state 1
    start                          shift and go to state 2
    bskip                          shift and go to state 3

state 1

    (0) S' -> init .



state 2

    (1) init -> start .

    $end            reduce using rule 1 (init -> start .)


state 3

    (2) start -> bskip . BEGINTABLE skip OPENTABLE handleRow CLOSETABLE

    BEGINTABLE      shift and go to state 17


state 4

    (14) bskip -> OPENTABLE . bskip
    (3) bskip -> . CONTENT bskip
    (4) bskip -> . OPENHREF bskip
    (5) bskip -> . CLOSEHREF bskip
    (6) bskip -> . OPENDATA bskip
    (7) bskip -> . CLOSEDATA bskip
    (8) bskip -> . OPENROW bskip
    (9) bskip -> . CLOSEROW bskip
    (10) bskip -> . OPENHEADER bskip
    (11) bskip -> . CLOSEHEADER bskip
    (12) bskip -> . OPENABBR bskip
    (13) bskip -> . CLOSEABBR bskip
    (14) bskip -> . OPENTABLE bskip
    (15) bskip -> . CLOSETABLE bskip
    (16) bskip -> .

    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENHEADER      shift and go to state 13
    CLOSEHEADER     shift and go to state 14
    OPENABBR        shift and go to state 15
    CLOSEABBR       shift and go to state 16
    OPENTABLE       shift and go to state 4
    CLOSETABLE      shift and go to state 5
    BEGINTABLE      reduce using rule 16 (bskip -> .)

    bskip                          shift and go to state 18

state 5

    (15) bskip -> CLOSETABLE . bskip
    (3) bskip -> . CONTENT bskip
    (4) bskip -> . OPENHREF bskip
    (5) bskip -> . CLOSEHREF bskip
    (6) bskip -> . OPENDATA bskip
    (7) bskip -> . CLOSEDATA bskip
    (8) bskip -> . OPENROW bskip
    (9) bskip -> . CLOSEROW bskip
    (10) bskip -> . OPENHEADER bskip
    (11) bskip -> . CLOSEHEADER bskip
    (12) bskip -> . OPENABBR bskip
    (13) bskip -> . CLOSEABBR bskip
    (14) bskip -> . OPENTABLE bskip
    (15) bskip -> . CLOSETABLE bskip
    (16) bskip -> .

    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENHEADER      shift and go to state 13
    CLOSEHEADER     shift and go to state 14
    OPENABBR        shift and go to state 15
    CLOSEABBR       shift and go to state 16
    OPENTABLE       shift and go to state 4
    CLOSETABLE      shift and go to state 5
    BEGINTABLE      reduce using rule 16 (bskip -> .)

    bskip                          shift and go to state 19

state 6

    (3) bskip -> CONTENT . bskip
    (3) bskip -> . CONTENT bskip
    (4) bskip -> . OPENHREF bskip
    (5) bskip -> . CLOSEHREF bskip
    (6) bskip -> . OPENDATA bskip
    (7) bskip -> . CLOSEDATA bskip
    (8) bskip -> . OPENROW bskip
    (9) bskip -> . CLOSEROW bskip
    (10) bskip -> . OPENHEADER bskip
    (11) bskip -> . CLOSEHEADER bskip
    (12) bskip -> . OPENABBR bskip
    (13) bskip -> . CLOSEABBR bskip
    (14) bskip -> . OPENTABLE bskip
    (15) bskip -> . CLOSETABLE bskip
    (16) bskip -> .

    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENHEADER      shift and go to state 13
    CLOSEHEADER     shift and go to state 14
    OPENABBR        shift and go to state 15
    CLOSEABBR       shift and go to state 16
    OPENTABLE       shift and go to state 4
    CLOSETABLE      shift and go to state 5
    BEGINTABLE      reduce using rule 16 (bskip -> .)

    bskip                          shift and go to state 20

state 7

    (4) bskip -> OPENHREF . bskip
    (3) bskip -> . CONTENT bskip
    (4) bskip -> . OPENHREF bskip
    (5) bskip -> . CLOSEHREF bskip
    (6) bskip -> . OPENDATA bskip
    (7) bskip -> . CLOSEDATA bskip
    (8) bskip -> . OPENROW bskip
    (9) bskip -> . CLOSEROW bskip
    (10) bskip -> . OPENHEADER bskip
    (11) bskip -> . CLOSEHEADER bskip
    (12) bskip -> . OPENABBR bskip
    (13) bskip -> . CLOSEABBR bskip
    (14) bskip -> . OPENTABLE bskip
    (15) bskip -> . CLOSETABLE bskip
    (16) bskip -> .

    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENHEADER      shift and go to state 13
    CLOSEHEADER     shift and go to state 14
    OPENABBR        shift and go to state 15
    CLOSEABBR       shift and go to state 16
    OPENTABLE       shift and go to state 4
    CLOSETABLE      shift and go to state 5
    BEGINTABLE      reduce using rule 16 (bskip -> .)

    bskip                          shift and go to state 21

state 8

    (5) bskip -> CLOSEHREF . bskip
    (3) bskip -> . CONTENT bskip
    (4) bskip -> . OPENHREF bskip
    (5) bskip -> . CLOSEHREF bskip
    (6) bskip -> . OPENDATA bskip
    (7) bskip -> . CLOSEDATA bskip
    (8) bskip -> . OPENROW bskip
    (9) bskip -> . CLOSEROW bskip
    (10) bskip -> . OPENHEADER bskip
    (11) bskip -> . CLOSEHEADER bskip
    (12) bskip -> . OPENABBR bskip
    (13) bskip -> . CLOSEABBR bskip
    (14) bskip -> . OPENTABLE bskip
    (15) bskip -> . CLOSETABLE bskip
    (16) bskip -> .

    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENHEADER      shift and go to state 13
    CLOSEHEADER     shift and go to state 14
    OPENABBR        shift and go to state 15
    CLOSEABBR       shift and go to state 16
    OPENTABLE       shift and go to state 4
    CLOSETABLE      shift and go to state 5
    BEGINTABLE      reduce using rule 16 (bskip -> .)

    bskip                          shift and go to state 22

state 9

    (6) bskip -> OPENDATA . bskip
    (3) bskip -> . CONTENT bskip
    (4) bskip -> . OPENHREF bskip
    (5) bskip -> . CLOSEHREF bskip
    (6) bskip -> . OPENDATA bskip
    (7) bskip -> . CLOSEDATA bskip
    (8) bskip -> . OPENROW bskip
    (9) bskip -> . CLOSEROW bskip
    (10) bskip -> . OPENHEADER bskip
    (11) bskip -> . CLOSEHEADER bskip
    (12) bskip -> . OPENABBR bskip
    (13) bskip -> . CLOSEABBR bskip
    (14) bskip -> . OPENTABLE bskip
    (15) bskip -> . CLOSETABLE bskip
    (16) bskip -> .

    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENHEADER      shift and go to state 13
    CLOSEHEADER     shift and go to state 14
    OPENABBR        shift and go to state 15
    CLOSEABBR       shift and go to state 16
    OPENTABLE       shift and go to state 4
    CLOSETABLE      shift and go to state 5
    BEGINTABLE      reduce using rule 16 (bskip -> .)

    bskip                          shift and go to state 23

state 10

    (7) bskip -> CLOSEDATA . bskip
    (3) bskip -> . CONTENT bskip
    (4) bskip -> . OPENHREF bskip
    (5) bskip -> . CLOSEHREF bskip
    (6) bskip -> . OPENDATA bskip
    (7) bskip -> . CLOSEDATA bskip
    (8) bskip -> . OPENROW bskip
    (9) bskip -> . CLOSEROW bskip
    (10) bskip -> . OPENHEADER bskip
    (11) bskip -> . CLOSEHEADER bskip
    (12) bskip -> . OPENABBR bskip
    (13) bskip -> . CLOSEABBR bskip
    (14) bskip -> . OPENTABLE bskip
    (15) bskip -> . CLOSETABLE bskip
    (16) bskip -> .

    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENHEADER      shift and go to state 13
    CLOSEHEADER     shift and go to state 14
    OPENABBR        shift and go to state 15
    CLOSEABBR       shift and go to state 16
    OPENTABLE       shift and go to state 4
    CLOSETABLE      shift and go to state 5
    BEGINTABLE      reduce using rule 16 (bskip -> .)

    bskip                          shift and go to state 24

state 11

    (8) bskip -> OPENROW . bskip
    (3) bskip -> . CONTENT bskip
    (4) bskip -> . OPENHREF bskip
    (5) bskip -> . CLOSEHREF bskip
    (6) bskip -> . OPENDATA bskip
    (7) bskip -> . CLOSEDATA bskip
    (8) bskip -> . OPENROW bskip
    (9) bskip -> . CLOSEROW bskip
    (10) bskip -> . OPENHEADER bskip
    (11) bskip -> . CLOSEHEADER bskip
    (12) bskip -> . OPENABBR bskip
    (13) bskip -> . CLOSEABBR bskip
    (14) bskip -> . OPENTABLE bskip
    (15) bskip -> . CLOSETABLE bskip
    (16) bskip -> .

    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENHEADER      shift and go to state 13
    CLOSEHEADER     shift and go to state 14
    OPENABBR        shift and go to state 15
    CLOSEABBR       shift and go to state 16
    OPENTABLE       shift and go to state 4
    CLOSETABLE      shift and go to state 5
    BEGINTABLE      reduce using rule 16 (bskip -> .)

    bskip                          shift and go to state 25

state 12

    (9) bskip -> CLOSEROW . bskip
    (3) bskip -> . CONTENT bskip
    (4) bskip -> . OPENHREF bskip
    (5) bskip -> . CLOSEHREF bskip
    (6) bskip -> . OPENDATA bskip
    (7) bskip -> . CLOSEDATA bskip
    (8) bskip -> . OPENROW bskip
    (9) bskip -> . CLOSEROW bskip
    (10) bskip -> . OPENHEADER bskip
    (11) bskip -> . CLOSEHEADER bskip
    (12) bskip -> . OPENABBR bskip
    (13) bskip -> . CLOSEABBR bskip
    (14) bskip -> . OPENTABLE bskip
    (15) bskip -> . CLOSETABLE bskip
    (16) bskip -> .

    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENHEADER      shift and go to state 13
    CLOSEHEADER     shift and go to state 14
    OPENABBR        shift and go to state 15
    CLOSEABBR       shift and go to state 16
    OPENTABLE       shift and go to state 4
    CLOSETABLE      shift and go to state 5
    BEGINTABLE      reduce using rule 16 (bskip -> .)

    bskip                          shift and go to state 26

state 13

    (10) bskip -> OPENHEADER . bskip
    (3) bskip -> . CONTENT bskip
    (4) bskip -> . OPENHREF bskip
    (5) bskip -> . CLOSEHREF bskip
    (6) bskip -> . OPENDATA bskip
    (7) bskip -> . CLOSEDATA bskip
    (8) bskip -> . OPENROW bskip
    (9) bskip -> . CLOSEROW bskip
    (10) bskip -> . OPENHEADER bskip
    (11) bskip -> . CLOSEHEADER bskip
    (12) bskip -> . OPENABBR bskip
    (13) bskip -> . CLOSEABBR bskip
    (14) bskip -> . OPENTABLE bskip
    (15) bskip -> . CLOSETABLE bskip
    (16) bskip -> .

    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENHEADER      shift and go to state 13
    CLOSEHEADER     shift and go to state 14
    OPENABBR        shift and go to state 15
    CLOSEABBR       shift and go to state 16
    OPENTABLE       shift and go to state 4
    CLOSETABLE      shift and go to state 5
    BEGINTABLE      reduce using rule 16 (bskip -> .)

    bskip                          shift and go to state 27

state 14

    (11) bskip -> CLOSEHEADER . bskip
    (3) bskip -> . CONTENT bskip
    (4) bskip -> . OPENHREF bskip
    (5) bskip -> . CLOSEHREF bskip
    (6) bskip -> . OPENDATA bskip
    (7) bskip -> . CLOSEDATA bskip
    (8) bskip -> . OPENROW bskip
    (9) bskip -> . CLOSEROW bskip
    (10) bskip -> . OPENHEADER bskip
    (11) bskip -> . CLOSEHEADER bskip
    (12) bskip -> . OPENABBR bskip
    (13) bskip -> . CLOSEABBR bskip
    (14) bskip -> . OPENTABLE bskip
    (15) bskip -> . CLOSETABLE bskip
    (16) bskip -> .

    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENHEADER      shift and go to state 13
    CLOSEHEADER     shift and go to state 14
    OPENABBR        shift and go to state 15
    CLOSEABBR       shift and go to state 16
    OPENTABLE       shift and go to state 4
    CLOSETABLE      shift and go to state 5
    BEGINTABLE      reduce using rule 16 (bskip -> .)

    bskip                          shift and go to state 28

state 15

    (12) bskip -> OPENABBR . bskip
    (3) bskip -> . CONTENT bskip
    (4) bskip -> . OPENHREF bskip
    (5) bskip -> . CLOSEHREF bskip
    (6) bskip -> . OPENDATA bskip
    (7) bskip -> . CLOSEDATA bskip
    (8) bskip -> . OPENROW bskip
    (9) bskip -> . CLOSEROW bskip
    (10) bskip -> . OPENHEADER bskip
    (11) bskip -> . CLOSEHEADER bskip
    (12) bskip -> . OPENABBR bskip
    (13) bskip -> . CLOSEABBR bskip
    (14) bskip -> . OPENTABLE bskip
    (15) bskip -> . CLOSETABLE bskip
    (16) bskip -> .

    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENHEADER      shift and go to state 13
    CLOSEHEADER     shift and go to state 14
    OPENABBR        shift and go to state 15
    CLOSEABBR       shift and go to state 16
    OPENTABLE       shift and go to state 4
    CLOSETABLE      shift and go to state 5
    BEGINTABLE      reduce using rule 16 (bskip -> .)

    bskip                          shift and go to state 29

state 16

    (13) bskip -> CLOSEABBR . bskip
    (3) bskip -> . CONTENT bskip
    (4) bskip -> . OPENHREF bskip
    (5) bskip -> . CLOSEHREF bskip
    (6) bskip -> . OPENDATA bskip
    (7) bskip -> . CLOSEDATA bskip
    (8) bskip -> . OPENROW bskip
    (9) bskip -> . CLOSEROW bskip
    (10) bskip -> . OPENHEADER bskip
    (11) bskip -> . CLOSEHEADER bskip
    (12) bskip -> . OPENABBR bskip
    (13) bskip -> . CLOSEABBR bskip
    (14) bskip -> . OPENTABLE bskip
    (15) bskip -> . CLOSETABLE bskip
    (16) bskip -> .

    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENHEADER      shift and go to state 13
    CLOSEHEADER     shift and go to state 14
